<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">
	<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
		<TextView android:text="@string/mama_name" android:id="@+id/tv_mama_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:text="" android:id="@+id/et_mama_name" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
		<TextView android:text="@string/mama_mc" android:id="@+id/tv_mc" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<DatePicker android:id="@+id/dp_mama_mc" android:layout_width="wrap_content" android:layout_height="wrap_content"></DatePicker>
		<TextView android:text="@string/mama_calcType" android:id="@+id/tv_calc_type" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<Spinner android:id="@+id/sp_calc_type" android:layout_width="wrap_content" android:layout_height="wrap_content"></Spinner>

		<TextView android:text="@string/baby_name" android:id="@+id/tv_baby_name" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
		<EditText android:text="" android:id="@+id/et_baby_name" android:layout_width="fill_parent" android:layout_height="wrap_content"></EditText>
	</LinearLayout>
	<LinearLayout android:id="@+id/RelativeLayout01" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/ButtonBar" android:gravity="right">
		<Button android:text="@string/ok_btn" android:id="@+id/btn_ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="80dip"></Button>
		<Button android:text="@string/cancel_btn" android:id="@+id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:width="80dip"></Button>
	</LinearLayout>
</LinearLayout>
